# yenibot-research

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ORIGINAL_README.md  SKILLS.md
notebooks/: 00_phase1_auto_run.ipynb  01_data_preparation.ipynb  02_feature_engineering.ipynb  03_labeling.ipynb  04_training_walk_forward.ipynb  05_diagnostics_validation.ipynb
src/yenibot/: __init__.py  losses.py
src/yenibot/automation/: __init__.py  auto_review.py
src/yenibot/config/: __init__.py  base.yaml  loader.py
src/yenibot/config/profiles/: active.yaml  archive.yaml
src/yenibot/data/: __init__.py  binance.py  validation.py
src/yenibot/diagnostics/: __init__.py  calibration.py  metrics.py  model_analysis.py
src/yenibot/diagnostics/reporting/: __init__.py  _monolith.py  bundle_builder.py  fold_analysis.py  fold_metrics.py  score_analysis.py  threshold_analysis.py  utils.py
src/yenibot/experiments/: __init__.py  _monolith.py  blend.py  holdout.py  memory.py  profile_resolver.py  report_writer.py  runner.py  triage.py  utils.py
src/yenibot/features/: __init__.py  builder.py  wavelet.py
src/yenibot/labeling/: __init__.py  triple_barrier.py
src/yenibot/models/: __init__.py  hybrid.py  tcn.py
src/yenibot/regime/: __init__.py  hmm.py
src/yenibot/training/: __init__.py  dataset.py  trainer.py  walk_forward.py
tests/: conftest.py  test_auto_review.py  test_data_validation.py  test_diagnostics_reporting.py  test_experiments.py  test_feature_filtering.py  test_features.py  test_labeling.py  test_losses.py  test_model_hmm.py  test_training_integration.py
