[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yenibot"
version = "0.1.0"
description = "Phase 1 ML foundation for BTC/USDT perpetual futures direction modeling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yeniBot Team" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "torch>=2.2",
    "numba>=0.59",
    "PyWavelets>=1.6",
    "hmmlearn>=0.3.2",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]
mlops = [
    "mlflow>=2.12",
    "dvc>=3.50",
]

[project.scripts]
yenibot-review = "yenibot.automation.auto_review:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yenibot"]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "C4",     # comprehensions
    "PIE",    # misc lints
    "PT",     # pytest style
    "RSE",    # raise
    "RET",    # return
    "TCH",    # type checking
    "TID",    # tidy imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM108", # ternary operator
    "RET504", # unnecessary assignment before return
    "UP007",  # use X | Y for union types (keep Optional for readability)
]

[tool.ruff.lint.isort]
known-first-party = ["yenibot"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

# ── Mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*", "hmmlearn.*", "numba.*", "pywt.*", "joblib.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring GPU or data",
]

# ── Coverage ─────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/yenibot"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
